--- a/cumulus/client/consensus/proposer/Cargo.toml
+++ b/cumulus/client/consensus/proposer/Cargo.toml
@@ -21,6 +21,7 @@ sp-consensus = { workspace = true, default-features = true }
 sp-inherents = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
 sp-state-machine = { workspace = true, default-features = true }
+sp-core = { workspace = true, default-features = true }
 
 # Cumulus
 cumulus-primitives-parachain-inherent = { workspace = true, default-features = true }
